# ai25m016-SWEG_ExercisePart1

./: .env  .gitignore  README.md  backend.yml  dev-requirements.txt  docker-compose.github.yml  docker-compose.local.yml  docker-compose.orch.local.yml  docker-compose.orch.yml  docker-compose.queue.local.yml  docker-compose.queue.mirza.yml  docker-compose.queue.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_local.ps1  run_local.sh
.github/: issue-branch.yml
.github/workflows/: backend-api-tests.yml  backend-docker.yml  backend-orch.yml  backend-release.yml  backend-tests.yml  backend.yml  create-issue-branch.yml  frontend-docker.yml  frontend-orch.yml  frontend-release.yml  frontend-tests.yml  release-images.yml  tests.yml  validate-branch-issue.yml
backend/: .dockerignore  .env.compose  .env.local  Dockerfile  main.py  pyproject.toml  pytest.ini
backend/src/simple_social_backend/: __main__.py  api.py  cli.py  db.py  events.py  main.py  models.py  smoke_resizer.py
backend/tests/: conftest.py  test_api.py  test_persistence.py  test_resizer.py  test_resizer_e2e.py  test_resizer_smoke_pytest.py  test_sentiment.py  test_sentiment_gatekeeper.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/test-results/: .last-run.json
frontend/test-results/tests-posts-can-create-a-post-and-see-it-in-the-list/: error-context.md
frontend/tests/: posts.spec.js
hooks/: commit-msg  pre-push
image_resizer/: .dockerignore  Dockerfile  main.py  pyproject.toml
image_resizer/src/simple_social_resizer/: main.py
image_resizer/tests/: conftest.py  test_resizer.py
ml_worker/: Dockerfile  pyproject.toml
ml_worker/src/simple_social_textgen/: main.py
scripts/: install_hooks.sh  run_tests.sh  setup_git_clean_history.sh  test_persistence.sh
sentiment_analysis/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
sentiment_analysis/scripts/: convert_model.py
sentiment_analysis/src/simple_social_sentiment/: __main__py  main.py  model.py
sentiment_analysis/tests/: test_sentiment.py
src/simple_social/: api.py  cli.py  db.py
tests/: conftest.py  test_api.py
tests_shared/: docker_compose.py  fixtures_backend.py
text_gen/: .env.compose  Dockerfile  pyproject.toml
text_gen/src/simple_social_textgen/: __main__.py
text_gen/tests/: test_textgen.py
tools/: run_checks.py
