[project]
name = "simple-social-resizer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pika>=1.3.2",
  "requests",
  "pillow",
  "python-dotenv",
]

[project.scripts]
social-resizer = "simple_social_resizer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_social_resizer"]
