[project]
name = "simple-social-sentiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.0",
  "sqlmodel>=0.0.27",
  "uvicorn>=0.38.0",
  "psycopg[binary]",
  "pika>=1.3.2",
  "python-multipart>=0.0.9",
  "python-dotenv",
  "requests",   # nur wenn du den HTTP-fallback nutzt
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pillow",
  "httpx",
]

[project.scripts]
social-sentiment = "simple_social_sentiment.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_social_sentiment"]
