[project]
name = "simple-social-textgen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pika>=1.3.2",
  "python-dotenv",
  "requests",
  "torch==2.2.2",
  "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
social-textgen = "simple_social_textgen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_social_textgen"]
